feat: added field for mirrornodeGrpcAddr
Signed-off-by: Manish Dait <daitmanish88@gmail.com>